# minipy

./: .gitignore  AST.h  Analysis.cc  Analysis.h  AnalysisVisitable.h  AnalysisVisitor.cc  AnalysisVisitor.h  Codegen.cc  Codegen.h  CodegenVisitor.h  Makefile  MiniC.g4  ParseTreeVisitor.h  README  Scope.h  compile.sh  libc.c  libc.mpy  main.cpp  meson.build  out  out.s  shim.c  test.mc
include/: AST.h  CodegenVisitor.h  ParseTreeVisitor.h  Scope.h
sample-programs/: 1.mpy  10.mpy  11.mpy  2.mpy  3.mpy  4.mpy  5.mpy  6.mpy  7.mpy  8.mpy  9.mpy
src/: AST.cc  Analysis.cc  AnalysisVisitable.cc  Codegen.cc  Scope.cc  main.cc
